[alter]: the unorder list in code file
The unorder list for grouping a collection of items that do not have a numerical ordering in web - page

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 								</div>
 							</section>
 
+										<ul>
+											<li>Lorem ipsum dolor sit.</li>
+											<li>Dolor pulvinar etiam.</li>
+											<li>Etiam vel felis viverra.</li>
+										</ul>
+						
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
