[upgrade]: Add the Features Grid After Panel
Add this Features Grid in your website So the user can see the features of products and etc.

--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
 									<img src="images/pic03.jpg" alt="" />
 								</div>
 							</section>
+						<section id="three" class="wrapper style1">
+					<div class="container">
+						<header class="major special">
+							<h2>Mauris vulputate dolor</h2>
+							<p>Feugiat sed lorem ipsum magna</p>
+						</header>
+						<div class="feature-grid">
+							<div class="feature">
+								<div class="image rounded"><img src="images/pic04.jpg" alt="" /></div>
+								<div class="content">
+									<header>
+										<h4>Lorem ipsum</h4>
+										<p>Lorem ipsum dolor sit</p>
+									</header>
+									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore esse tenetur accusantium porro omnis, unde mollitia totam sit nesciunt consectetur.</p>
+								</div>
+							</div>
 
 						<!-- Panel -->
 							<section class="panel">
