--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
 										<h6>Heading Level 6</h6>
 
 									</div>
+									<div class="intro color4">
+									<h2 class="major">Contact</h2>
+									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+								</div>
 									<div class="span-3">
 
 										<h4>Blockquote</h4>
