--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
 									<h2 class="major">Elements</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam. </p>
 								</div>
+								<header class="major">
+						<h2>Consectetur adipisicing elit</h2>
+						<p>Lorem ipsum dolor sit amet. Delectus consequatur, similique quia!</p>
+					</header>
 								<div class="inner columns aligned">
 									<div class="span-2-75">
 
